# hl_mai_07_modifiability

./: .gitignore  CMakeLists.txt  cqs_1.cpp  cqs_2.cpp  dip_1.cpp  dip_2.cpp  grasp_controller.cpp  grasp_creator.cpp  grasp_ia.cpp  grasp_ia_fix.cpp  isp_1.cpp  isp_2.cpp  lsp_1.cpp  lsp_2.cpp  ocp_1.cpp  ocp_2_template.cpp  ocp_3_crtp.cpp  ocp_4_strategy.cpp  srp_1.cpp  srp_2.cpp  srp_3.cpp  srp_4.cpp  techstack.md  techstack.yml
