cmake_minimum_required(VERSION 3.5)

project(hl_mai_07_modifiablity)

add_executable(srp_1 srp_1.cpp)
set_target_properties(srp_1 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(srp_2 srp_2.cpp)
set_target_properties(srp_2 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(srp_3 srp_3.cpp)
set_target_properties(srp_3 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(srp_4 srp_4.cpp)
set_target_properties(srp_4 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(ocp_1 ocp_1.cpp)
set_target_properties(ocp_1 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(ocp_2_template ocp_2_template.cpp)
set_target_properties(ocp_2_template PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(ocp_3_crtp ocp_3_crtp.cpp)
set_target_properties(ocp_3_crtp PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(ocp_4_strategy ocp_4_strategy.cpp)
set_target_properties(ocp_4_strategy PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(lsp_1 lsp_1.cpp)
set_target_properties(lsp_1 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(lsp_2 lsp_2.cpp)
set_target_properties(lsp_2 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(cqs_1 cqs_1.cpp)
set_target_properties(cqs_1 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(cqs_2 cqs_2.cpp)
set_target_properties(cqs_2 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(isp_1 isp_1.cpp)
set_target_properties(isp_1 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(isp_2 isp_2.cpp)
set_target_properties(isp_2 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(dip_1 dip_1.cpp)
set_target_properties(dip_1 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)

add_executable(dip_2 dip_2.cpp)
set_target_properties(dip_2 PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)